force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <description>Object used to organize all team tasks into records.</description>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>