force-app/main/default/objects/Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The Task due date.</description>
    <inlineHelpText>The Task due date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>